--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "flowmoon-frontend",
-  "version": "0.1.0",
+  "name": "frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "webpack serve --mode=development --open",
-    "build": "webpack --mode=production"
-  },
-  "devDependencies": {
-    "copy-webpack-plugin": "^9.1.0",
-    "html-webpack-plugin": "^5.5.1",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.83.1",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "tsrpc-browser": "^3.4.11"
+    "tsrpc-browser": "^3.1.0",
+    "vue": "^3.2.47"
   },
-  "browserslist": [
-    "defaults"
-  ]
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2",
+    "vue-tsc": "^1.4.2"
+  }
 }
